overflow fix

--- a/src/components/topmenu.module.css
+++ b/src/components/topmenu.module.css
@@ -8,12 +8,12 @@
     right: 10px;
     z-index: 30;
     display: flex;
-    overflow-x: scroll;
     flex-direction: row;
     border-radius: 30px;
     outline-style: solid;
     outline-color: white;
     outline-width:5px;
+    overflow: hidden;
 }
 .logoimg{
     height: 100%;
@@ -56,10 +56,10 @@
     right: 30px;
     z-index: 30;
     display: flex;
-    overflow-x: scroll;
     flex-direction: row;
     border-radius: 8px 8px 30px 30px;
     outline-style: solid;
     outline-color: white;
     outline-width:5px;
 }
+
